# Clipboard-

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_milestone2.sql  0003_default_groups.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clipboard/: mod.rs  windows.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/security/: detector.rs
src-tauri/src/shortcuts/: mod.rs
src-tauri/src/tray/: mod.rs
src/lib/: tauri.ts
src/stores/: clipboard-store.ts
src/types/: clipboard.ts
