[package]
name = "clipboard-plus"
version = "0.1.1"
description = "Private local clipboard manager"
edition = "2021"

[lib]
name = "clipboard_plus_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3.4"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
url = "2"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
